--- a/my-project/src/app/components/question/question.component.scss
+++ b/my-project/src/app/components/question/question.component.scss
@@ -1,52 +1,152 @@
-.container{
-  height: 100%;
-  width: 100%;
-  margin-top: 70px;
+
+@import "../../../scss/_mixin.scss";
+
+$alabaster: rgb(21, 76, 228);
+
+.main2{
+  background-color:#fff7f7;
+  margin-top: 60px;
+
 }
-.topDiv{
-  margin-top: 2%
+.main
+{
+  margin-top: 7%;
+}
+@media only screen and (min-width: 320px) and (max-width:599px){
+  .main {
+      width:100%;
+  }
+  .main2 {
+      width:100%;
+
+  }
+}
+@media only screen and  (min-width: 600px) and (max-width: 959px){
+  .main {
+     width:100%;
+  }
+  .main2 {
+      max-height:200px;
+      overflow-y: scroll;
+      width:100%;
+      position: fixed;
+      z-index: 1;
+  }
+  .div{
+      margin-bottom:180px;
+  }
+}
+@media only screen and  (min-width: 960px) and (max-width: 1279px){
+  .main {
+      width:700px
+  }
+  .main2 {
+      width:700px;
+      position: fixed;
+      z-index: 1;
+      max-height:200px;
+      overflow-y: scroll;
+  }
+  .div{
+      margin-bottom:180px
+  }
+}
+@media only screen and (min-width: 1280px) and (max-width: 1919px){
+  .main {
+      width:1000px
+  }
+  .main2 {
+      width:1000px;
+      position: fixed;
+      z-index: 1;
+      max-height:200px;
+      overflow-y: scroll;
+  }
+  .div{
+      margin-bottom:180px;
+  }
+}
+@media only screen and (min-width: 1920px) and (max-width: 5000px){
+  .main {
+      width:1100px
+  }
+  .main2 {
+      width:1100px;
+      position: fixed;z-index: 1;
+      max-height:200px;
+      overflow-y: scroll;
+  }
+  .div{
+      margin-bottom:180px
+  }
 }
 .title{
-  font-weight: 400;
-  font-size: 20px
+  font-size: 28px;
+  word-wrap: break-word;
+  margin-left: 30px;
+  @include overflowText;
 }
-.divider{
-  margin: 5px
+.description2{
+  font-size: 20px;
+  @include overflowText;
+  word-wrap: break-word;
+  margin-left: 30px;
 }
-.question{
-  font-weight: 300;
-  font-size: 18px
+.description{
+  font-size: 20px;
+  word-wrap: break-word;
+  margin-left: 30px;
 }
-.formfield{
-  width: 100%;
+.message{
+  word-wrap: break-word;
+
 }
-.miniFab{
-  box-shadow: none;
+.aaa{
+  word-wrap: break-all;
+}
+.star{
+  @include margin(-8px,0px,0px,0px);
+}
+.body{
+  @include margin(2%,0%,2%,0%);
+}
+.details{
+  font-size: 12px;
+
+}
+.body2{
+  @include margin(2%,0%,0%,0%);
+
+}
+.body3{
+  @include margin(1%,0%,0%,10%);
+
+}
+.input{
+ font-size: 15px;
+  border-bottom:1px solid rgb(0, 0, 0);
+  width:90%;
+  outline:none;
+  margin-left:25px;
+  margin-top:20px;
+}
+.input:empty:before{
+  content: attr(data-text);
+  @include opacity(0.5);
+  font-size: 15px;
+  width:60%;
+}
+.image{
+  @include margin(0px,20px,0px,10px);
 }
 
-.username{
-  font-size: 13px;
+.blue{
+  color:$alabaster;
 }
-.date{
-  opacity: 0.5;
+.close{
+  float:right;
+  margin-top:10px;
 }
-.checklist{
-  padding-bottom: 5px;
-}
-.icon{
-  opacity: 0.5;
-  cursor: pointer;
-}
-
-.br[_ngcontent-c14] {
-  position: relative;
-}
-.list{
-  margin: -19px 0 0 0;
-}
-
-
-
 
 
 
