--- a/my-project/src/app/components/question/question.component.html
+++ b/my-project/src/app/components/question/question.component.html
@@ -1,6 +1,6 @@
 
 <div fxLayout="column">
-  <div fxLayout=row fxLayoutAlign=center class=div >
+  <div fxLayout=row fxLayoutAlign=center class="div" >
   <div class=main2>
   <div>
     <button mat-button class=close (click)=close()>close</button>
@@ -19,6 +19,7 @@
       <div class=description>Ask a Question</div>
       <div class=input contenteditable=true #question editable=true data-text="enter your question???"
       (keydown.enter)=addQuestion()></div>
+
     </div>
     <div class=body *ngIf="questions.length!=0">
       <div *ngFor="let item of questions">
@@ -29,7 +30,7 @@
     </div>
   </div></div>
   </div>
-  <div fxLayout=row fxLayoutAlign=center>
+  <div fxLayout=row fxLayoutAlign=center >
     <div *ngIf="questions.length!=0" class=main>
       <!-- *******************************question start************************************ -->
       <div *ngFor="let item of questions" class=body>
@@ -64,8 +65,7 @@
       <div *ngIf="reply">
           <mat-divider></mat-divider>
           <div fxLayout=row class=body>
-            <div fxFlex=70 class=input style="border-bottom:1px solid gray" contenteditable=true
-            #replayMessage editable=true data-text="Write Your Reply..."></div>
+            <div fxFlex=90%  [froalaEditor]="options" [(froalaModel)]="editorContent"></div>
             <button fxFlex=10 mat-button  (click)=answer()>Reply</button>
           </div>
        </div>
@@ -73,7 +73,7 @@
 
       <!-- *******************************reply of question start************************************ -->
       <div *ngFor="let data of questions" >
-        <div  *ngIf="data.parentId==questions[0].id" class=body2>
+        <div  *ngIf="data.parentId==questions[0].id && data.isApproved==true" class=body2>
 
           <div fxLayout="row">
             <div fxFlex.xl=8 fxFlex.lg=8 fxFlex.md=8 fxFlex.sm=8 fxFlex.xs=15>
@@ -110,7 +110,8 @@
         <div *ngIf="reply2 && replyid==data.id">
             <mat-divider></mat-divider>
             <div fxLayout=row class=body>
-              <div fxFlex=70 class=input style="border-bottom:1px solid gray" contenteditable=true #replayMessage editable=true data-text="Write Your Reply..."></div>
+              <!-- <div fxFlex=70 class=input style="border-bottom:1px solid gray" contenteditable=true #replayMessage editable=true data-text="Write Your Reply..."></div> -->
+              <div fxFlex=90% [froalaEditor]="options" [(froalaModel)]="editorContent"></div>
               <button fxFlex=10 mat-button  (click)=answer()>Reply</button>
             </div>
          </div>
@@ -119,7 +120,7 @@
           <!-- *******************************reply of reply start************************************ -->
 
           <div *ngFor="let data2 of questions">
-            <div *ngIf="data2.parentId==data.id" class=body3>
+            <div *ngIf="data2.parentId==data.id && data.isApproved==true" class=body3>
               <div fxLayout="row" *ngIf="showHide" >
                   <div fxFlex.xl=8 fxFlex.lg=8 fxFlex.md=8 fxFlex.sm=8 fxFlex.xs=15><div class=image>
                   <div mat-card-avatar ngStyle.xs="width:30px;height:30px"
