--- a/my-project/src/app/components/question/question.component.scss
+++ b/my-project/src/app/components/question/question.component.scss
@@ -3,61 +3,62 @@
 
 $alabaster: rgb(21, 76, 228);
 
-.spinner {
-  margin: 100px auto;
-  width: 40px;
-  height: 40px;
-  position: relative;
-}
+// .spinner {
+//   margin: 100px auto;
+//   width: 40px;
+//   height: 40px;
+//   position: relative;
+// }
 
-.cube1, .cube2 {
-  background-color: #333;
-  width: 15px;
-  height: 15px;
-  position: absolute;
-  top: 0;
-  left: 0;
+// .cube1, .cube2 {
+//   background-color: #333;
+//   width: 15px;
+//   height: 15px;
+//   position: absolute;
+//   top: 0;
+//   left: 0;
 
-  -webkit-animation: sk-cubemove 1.8s infinite ease-in-out;
-  animation: sk-cubemove 1.8s infinite ease-in-out;
-}
+//   -webkit-animation: sk-cubemove 1.8s infinite ease-in-out;
+//   animation: sk-cubemove 1.8s infinite ease-in-out;
+// }
 
-.cube2 {
-  -webkit-animation-delay: -0.9s;
-  animation-delay: -0.9s;
-}
+// .cube2 {
+//   -webkit-animation-delay: -0.9s;
+//   animation-delay: -0.9s;
+// }
 
-@-webkit-keyframes sk-cubemove {
-  25% { -webkit-transform: translateX(42px) rotate(-90deg) scale(0.5) }
-  50% { -webkit-transform: translateX(42px) translateY(42px) rotate(-180deg) }
-  75% { -webkit-transform: translateX(0px) translateY(42px) rotate(-270deg) scale(0.5) }
-  100% { -webkit-transform: rotate(-360deg) }
-}
+// @-webkit-keyframes sk-cubemove {
+//   25% { -webkit-transform: translateX(42px) rotate(-90deg) scale(0.5) }
+//   50% { -webkit-transform: translateX(42px) translateY(42px) rotate(-180deg) }
+//   75% { -webkit-transform: translateX(0px) translateY(42px) rotate(-270deg) scale(0.5) }
+//   100% { -webkit-transform: rotate(-360deg) }
+// }
 
-@keyframes sk-cubemove {
-  25% {
-    transform: translateX(42px) rotate(-90deg) scale(0.5);
-    -webkit-transform: translateX(42px) rotate(-90deg) scale(0.5);
-  } 50% {
-    transform: translateX(42px) translateY(42px) rotate(-179deg);
-    -webkit-transform: translateX(42px) translateY(42px) rotate(-179deg);
-  } 50.1% {
-    transform: translateX(42px) translateY(42px) rotate(-180deg);
-    -webkit-transform: translateX(42px) translateY(42px) rotate(-180deg);
-  } 75% {
-    transform: translateX(0px) translateY(42px) rotate(-270deg) scale(0.5);
-    -webkit-transform: translateX(0px) translateY(42px) rotate(-270deg) scale(0.5);
-  } 100% {
-    transform: rotate(-360deg);
-    -webkit-transform: rotate(-360deg);
-  }
-}
+// @keyframes sk-cubemove {
+//   25% {
+//     transform: translateX(42px) rotate(-90deg) scale(0.5);
+//     -webkit-transform: translateX(42px) rotate(-90deg) scale(0.5);
+//   } 50% {
+//     transform: translateX(42px) translateY(42px) rotate(-179deg);
+//     -webkit-transform: translateX(42px) translateY(42px) rotate(-179deg);
+//   } 50.1% {
+//     transform: translateX(42px) translateY(42px) rotate(-180deg);
+//     -webkit-transform: translateX(42px) translateY(42px) rotate(-180deg);
+//   } 75% {
+//     transform: translateX(0px) translateY(42px) rotate(-270deg) scale(0.5);
+//     -webkit-transform: translateX(0px) translateY(42px) rotate(-270deg) scale(0.5);
+//   } 100% {
+//     transform: rotate(-360deg);
+//     -webkit-transform: rotate(-360deg);
+//   }
+// }
 
 
 .main2{
-  background-color:#fff7f7;
+  background-color:#f8f1f1;
   margin-top: 60px;
-
+  max-height:200px;
+  overflow-y: auto;
 }
 .main
 {
@@ -76,12 +77,18 @@ $alabaster: rgb(21, 76, 228);
   .main {
      width:100%;
   }
+
+
+  .hide
+  {
+   z-index: 1;
+  }
   .main2 {
       max-height:200px;
-      overflow-y: scroll;
+      overflow-y: auto;
       width:100%;
       position: fixed;
-      z-index: 1;
+      z-index:99;
   }
   .div{
       margin-bottom:180px;
@@ -94,7 +101,7 @@ $alabaster: rgb(21, 76, 228);
   .main2 {
       width:700px;
       position: fixed;
-      z-index: 1;
+      z-index: 99;
       max-height:200px;
       overflow-y: scroll;
   }
@@ -109,12 +116,13 @@ $alabaster: rgb(21, 76, 228);
   .main2 {
       width:1000px;
       position: fixed;
-      z-index: 1;
+      z-index: 99;
       max-height:200px;
       overflow-y: auto;
   }
   .div{
-      margin-bottom:180px;
+      // margin-bottom:180px;
+      height: 200px;
   }
 }
 @media only screen and (min-width: 1920px) and (max-width: 5000px){
@@ -123,7 +131,7 @@ $alabaster: rgb(21, 76, 228);
   }
   .main2 {
       width:1100px;
-      position: fixed;z-index: 1;
+      position: fixed;z-index: 99;
       max-height:200px;
       overflow-y: scroll;
   }
