--- a/my-project/src/app/components/login/login.component.html
+++ b/my-project/src/app/components/login/login.component.html
@@ -1,9 +1,10 @@
 <div class="container" fxLayout>
-  <div class="item item-1" fxFlex="33%" fxFlex.xs="0" fxFlex.sm="8"></div>
-  <div fxFlex="34" fxFlex.xs="100" fxFlex.sm="84">
-    <div fxLayout="column" fxLayoutGap="20%">
+  <div class="item item-1" fxFlex="15%" fxFlex.xs="0" fxFlex.sm="8"></div>
+  <div fxFlex="70" fxFlex.xs="100" fxFlex.sm="84">
+    <div fxLayout="column" fxLayoutGap="7%">
       <div class="item item-1" fxFlex="33%" fxFlex.xs="0" fxFlex.sm="8"></div>
-      <div fxFlex="34%" fxFlex.xs="100" fxFlex.sm="84" [formGroup]='lForm'>
+      <div fxLayout=row fxFlex="34%" >
+      <div fxFlex="50%" fxFlex.xs="100" fxFlex.sm="84" [formGroup]='lForm' >
         <mat-card class="card">
           <div class="div1">
 
@@ -31,10 +32,39 @@
           </div>
         </mat-card>
       </div>
+      <div class="services" fxFlex="50%" fxFlex.xs="50" fxFlex.sm="42">
+          <mat-card class="card1">
+              <div class="div1">
+                <mat-card-title>Services</mat-card-title>
+                <mat-card-subtitle>to continue to fundooNotes</mat-card-subtitle>
+                <div fxLayout="row" fxLayoutAlign="space-around center" class="serviceCard" >
+                  <div *ngFor="let index of services" fxLayout="row" >
+                <mat-card
+                [ngClass]="index.select ? 'select' : 'notSelect'">
+                  <div class="alignCart" >
+              <mat-card class="cartMatCard cartSize">
+                <div class="package">{{index.price | currency}}</div><br>
+                <div class="basic" >{{index.name | uppercase}}</div>
+                <div>
+                    <ul class="details">
+                        <li> {{index.description}}</li>
+                      </ul>
+                </div>
+              </mat-card><br>
+              <div class="cartTitle" (click)="addToCart(index)">ADD TO CART</div>
+            </div>
+            </mat-card>
+
+          </div>
+                </div>
+              </div>
+            </mat-card>
+        </div>
+        </div>
       <div class="item item-1" fxFlex="33%" fxFlex.xs="0" fxFlex.sm="8"></div>
     </div>
 
   </div>
-  <div class="item item-1" fxFlex="33%" fxFlex.xs="0" fxFlex.sm="8"></div>
+  <div class="item item-1" fxFlex="15%" fxFlex.xs="0" fxFlex.sm="8"></div>
 </div>
 <router-outlet></router-outlet>
