--- a/my-project/src/app/components/login/login.component.html
+++ b/my-project/src/app/components/login/login.component.html
@@ -38,9 +38,9 @@
                 <mat-card-title>Services</mat-card-title>
                 <mat-card-subtitle>to continue to fundooNotes</mat-card-subtitle>
                 <div fxLayout="row" fxLayoutAlign="space-around center" class="serviceCard" >
-                  <div *ngFor="let index of services" fxLayout="row" >
+                  <div *ngFor="let index of card" fxLayout="row" >
                 <mat-card
-                [ngClass]="index.select ? 'select' : 'notSelect'">
+                [ngClass]="index.id==cardId ? 'select' : 'notSelect'">
                   <div class="alignCart" >
               <mat-card class="cartMatCard cartSize">
                 <div class="package">{{index.price | currency}}</div><br>
@@ -51,7 +51,8 @@
                       </ul>
                 </div>
               </mat-card><br>
-              <div class="cartTitle" (click)="addToCart(index)">ADD TO CART</div>
+              <div class="cartTitle" *ngIf="index.id==cardId" >SELECTED</div>
+              <div class="cartTitle" *ngIf="index.id!=cardId" >ADD TO CART</div>
             </div>
             </mat-card>
 
