--- a/my-project/src/app/components/navbar/navbar.component.html
+++ b/my-project/src/app/components/navbar/navbar.component.html
@@ -34,7 +34,7 @@
 
           </button>
           <button mat-icon-button class=" person commonColor" matTooltip="Cart">
-          <i class="material-icons">
+          <i class="material-icons" (click)="cart()">
               shopping_cart
               </i>
             </button>
